# napari-stable-diffusion

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
src/napari_stable_diffusion/: __init__.py  _widget.py  _widget_img2img.py  _widget_inpaint.py  napari.yaml  utils.py
src/napari_stable_diffusion/_tests/: test_widget.py
